fix: Address CodeRabbit review feedback
- Fix broken links in running-tasks.mdx (workflows, credentials cards)
- Fix infinite recursion in error-handling.mdx retry examples (add retries param)
- Fix API inconsistencies in proxy-geolocation.mdx (json_definition wrapper, workflow_id, parameters)
- Fix Argentina timezone to canonical IANA identifier
- Add await to create_workflow tip in build-a-workflow.mdx
- Use AWS Secrets Manager-backed parameters for S3 credentials in file-operations.mdx
- Fix broken proxy links in workflow-parameters.mdx (3 occurrences)
- Sync proxy location table with proxy-geolocation.mdx (remove invalid entries)
- Fix "the the" typo in webhooks.mdx

--- a/docs/cloud/running-tasks.mdx
+++ b/docs/cloud/running-tasks.mdx
@@ -345,15 +345,15 @@ The prompt drives everything. A good prompt includes:
   <Card
     title="Build a Workflow"
     icon="diagram-project"
-    href="/cloud/workflows"
+    href="/multi-step-automations/build-a-workflow"
   >
     Create multi-step automations with the visual workflow builder
   </Card>
   <Card
-    title="Store Credentials"
-    icon="key"
-    href="/cloud/credentials"
+    title="Extract Structured Data"
+    icon="table"
+    href="/running-automations/extract-structured-data"
   >
-    Save logins securely for sites that require authentication
+    Pull structured data from websites into JSON format
   </Card>
 </CardGroup>
