--- a/docs/multi-step-automations/build-a-workflow.mdx
+++ b/docs/multi-step-automations/build-a-workflow.mdx
@@ -544,7 +544,7 @@ curl -X POST "https://api.skyvern.com/v1/workflows" \
 </CodeGroup>
 
 <Tip>
-To load from a file: `client.create_workflow(yaml_definition=open("workflow.yaml").read())`
+To load from a file: `await client.create_workflow(yaml_definition=open("workflow.yaml").read())`
 </Tip>
 
 **Example response:**
