docs: Add interactive world map and improve reliability tips
Proxy & Geolocation:
- Replace broken dot-positioning approach with interactive SVG world map
- Users can now click country shapes to select proxy locations
- 211 countries rendered with color-coded availability
- US toggle for Residential vs ISP proxy types
- Code snippet generator with Python/TypeScript/cURL tabs

Reliability Tips (based on Pylon support ticket analysis):
- Add autocomplete/dropdown field cycling guidance (Issue #2398)
- Add Task block navigation scope warning (Issue #2146)
- Add submit button completion criteria tip (Issue #2174)
- Add validation block caveat about page state (Issue #2370)
- Add session timeout section for human-in-the-loop (Issue #2265)
- Expand keyboard shortcuts workaround table (Issues #2226, #1962)
- Add 5 new entries to common fixes table

--- a/docs/going-to-production/error-handling.mdx
+++ b/docs/going-to-production/error-handling.mdx
@@ -371,6 +371,10 @@ curl -X POST "https://api.skyvern.com/v1/run/tasks" \
 
 Add `error_code_mapping` to individual blocks (navigation, task, validation):
 
+<Note>
+The JSON examples below include comments (`//`) for clarity. Remove comments before using in actual workflow definitions—JSON does not support comments.
+</Note>
+
 <CodeGroup>
 ```json JSON
 {
@@ -451,6 +455,14 @@ When a mapped error occurs, your code appears in `output.error`. This field is a
 
 Both `output.error` (your code) and `failure_reason` (raw text) are present. Use `output.error` for branching, `failure_reason` for logging.
 
+**Quick reference:** Where error codes appear
+
+| Context | Field | Example |
+|---------|-------|---------|
+| Polling response | `run.output.error` | `run.output.get("error")` in Python |
+| Webhook payload | `output.error` | Same structure as polling |
+| Successful run | `output` contains your extracted data | No `error` key present |
+
 ---
 
 ## Step 4: Respond in code
@@ -460,6 +472,9 @@ Now you can write clean switch/match logic:
 <CodeGroup>
 ```python Python
 import asyncio
+from skyvern import Skyvern
+
+client = Skyvern(api_key="your-api-key")
 
 async def run_with_error_handling(retries=1):
     result = await client.run_task(
