--- a/docs/going-to-production/reliability-tips.mdx
+++ b/docs/going-to-production/reliability-tips.mdx
@@ -34,6 +34,10 @@ TERMINATE if you see an error message or the form cannot be submitted.
 
 **Be explicit about completion.** The AI needs to know when to stop. "COMPLETE when you see 'Order confirmed'" is unambiguous. Without this, the AI might keep navigating or stop too early.
 
+<Tip>
+**Don't forget the submit button.** A common failure mode is the AI completing after filling form fields but before clicking Submit. Be explicit: "COMPLETE when you have clicked the Submit button AND see a confirmation message." The AI might consider the form "done" once all fields are filled—make clear that submission is part of the goal.
+</Tip>
+
 **Use visual descriptions.** "Click the blue Submit button at the bottom of the form" works better than "click Submit"—there might be multiple buttons, and visual context helps the AI pick the right one. Describe position, color, icons, and surrounding text.
 
 **Start general, then refine.** Begin with simple prompts and add specifics based on failures. Over-specified prompts are brittle; the AI handles variation better when you describe goals rather than exact steps.
@@ -54,6 +58,31 @@ TERMINATE if you see an error message or the form cannot be submitted.
 
 **Assuming page state.** The AI doesn't know what page you expect to be on. Always describe what you expect to see, not just what to do.
 
+### Autocomplete and dropdown fields
+
+Address fields, city selectors, and other autocomplete inputs are notoriously tricky. The AI might type a value, see suggestions appear, then second-guess itself—erasing and retyping, cycling through options like "Toronto" → "Ontario" → "Canada" → "Toronto" again before settling.
+
+To reduce cycling behavior:
+
+**Be explicit about the exact value.** Instead of "enter the city," say "type 'Toronto' and select it from the dropdown."
+
+**Tell it to stop after selection.** Add "Once you've selected the value, move to the next field—don't modify it further."
+
+**Specify which suggestion to pick.** "Select the first suggestion that matches" or "Choose the option that shows the full address" reduces ambiguity.
+
+```
+Fill in the shipping address:
+- For the City field, type "Toronto" and select the first matching suggestion
+- Do NOT cycle through suggestions or second-guess your selection
+- Once a field is filled, move to the next field immediately
+
+{{address_data}}
+```
+
+<Warning>
+Multi-select fields (where you pick several options from a list) are slower and less reliable than single-select. If the form allows it, consider making multiple API calls with single values rather than one call selecting many options.
+</Warning>
+
 ---
 
 ## Choosing the right block type
@@ -65,6 +94,10 @@ Skyvern offers three block types with different tradeoffs between reliability an
 **Navigation blocks** give Skyvern a goal: "Fill out the registration form." The AI figures out which fields to fill and in what order. This handles variation in form layouts—fields might be in different positions, have different labels, or be split across tabs—but the AI can misinterpret ambiguous forms or fill fields you didn't intend.
 
 **Task blocks (Navigation V2)** handle multi-step goals: "Log in, navigate to settings, update profile." Maximum flexibility for complex workflows, but more room for the AI to take unexpected paths. A task block might navigate through menus you didn't anticipate or skip steps it deems unnecessary.
+
+<Warning>
+**Task blocks keep navigating until they believe the goal is complete.** If you want to click "Next" once and then stop, a Task block will likely click through ALL pages until it reaches the end. For single-action-then-stop behavior, use an Action block or Navigation block with explicit completion criteria like "COMPLETE after clicking Next once."
+</Warning>
 
 **Rule of thumb:** Start with the most deterministic block that can accomplish your goal. If a single click solves the problem, don't use a Task block—you're adding unnecessary interpretation where errors can creep in. Reserve Task blocks for genuinely multi-step workflows where you can't predict the exact sequence of actions.
 
@@ -162,6 +195,10 @@ if result.output["submitted_email"] != expected_email:
     raise ValueError("Email mismatch")
 ```
 
+<Warning>
+**Validation blocks read from the current page, not from prior block outputs.** If you need to validate extracted data from a previous block, use a Code block to compare values programmatically. Validation blocks evaluate their criteria against what's visible on screen—they don't have access to data extracted by earlier extraction blocks.
+</Warning>
+
 ---
 
 ## ForLoop reliability
@@ -210,24 +247,64 @@ loop_blocks:
 
 ---
 
+## Session timeouts and human-in-the-loop
+
+Browser sessions have a default timeout. If you're using human-in-the-loop workflows where a person must approve an action before proceeding, the session can expire while waiting for approval—especially if the approver is slow or in a different timezone.
+
+**Symptoms:** Runs that worked during testing fail in production with session expiry errors. The workflow waits for human approval, but by the time approval comes, the browser session has timed out.
+
+**Solutions:**
+
+1. **Increase session timeout** — Set a longer `timeout` when creating browser sessions for workflows that include human approval steps
+2. **Remove the human step for time-sensitive flows** — If session expiry is causing failures, consider making the workflow fully automated and reviewing results after completion
+3. **Split into multiple workflows** — Run the pre-approval steps, wait for human approval outside Skyvern, then trigger a second workflow for post-approval steps using a browser profile to maintain login state
+
+```python
+# Longer timeout for human-in-the-loop workflows
+session = await client.create_browser_session(
+    timeout=300,  # 5 minutes instead of default
+    proxy_location="RESIDENTIAL"
+)
+```
+
+<Note>
+For workflows with predictable human approval times, schedule runs to arrive in the approver's inbox during working hours when they can act quickly.
+</Note>
+
+---
+
 ## Keyboard actions and workarounds
 
 <Note>
-Direct keyboard shortcuts (Ctrl+C, Alt+Tab, etc.) are not currently supported. Here are workarounds for common scenarios.
+Direct keyboard shortcuts (Ctrl+C, Alt+Tab, Esc, etc.) are not currently supported. Here are workarounds for common scenarios.
 </Note>
 
 | Scenario | Workaround |
 |----------|------------|
 | **Copy text** | Use extraction block to get the text value |
 | **Paste into field** | Pass the value as a parameter: `{{value_to_paste}}` |
-| **Keyboard navigation** | Describe the click target visually instead |
-| **Hotkey-only features** | Look for menu alternatives or right-click options |
-| **Tab between fields** | AI handles field navigation automatically |
+| **Press Escape to close modal** | Click the X button or "Close" link instead. Add to prompt: "If a modal appears, close it by clicking the X button in the top right corner" |
+| **Keyboard navigation (Tab, arrows)** | Describe the click target visually instead |
+| **Ctrl+S to save** | Click the Save button in the UI, or look for auto-save indicators |
+| **Hotkey-only features** | Look for menu alternatives, toolbar buttons, or right-click context menus |
+| **Tab between fields** | AI handles field navigation automatically—no workaround needed |
+| **Enter to submit** | Explicitly click the Submit button rather than relying on Enter key |
 
-For applications that require keyboard shortcuts, consider:
-1. Using the Code block with custom Playwright scripts
-2. Checking if the application has an API alternative
-3. Using browser profiles with pre-configured settings
+For applications that genuinely require keyboard shortcuts with no UI alternative:
+
+1. **Use the Code block** with custom Playwright scripts—you can call `page.keyboard.press('Escape')` directly
+2. **Check for an API** — Many web apps have APIs that bypass the UI entirely
+3. **Use browser profiles** with pre-configured settings or extensions that add UI buttons for keyboard-only features
+
+```python
+# Example: Using Code block for keyboard actions
+- block_type: code
+  label: press_escape
+  code: |
+    page = context["skyvern_page"].page
+    await page.keyboard.press("Escape")
+    result = {"escaped": True}
+```
 
 ---
 
@@ -244,11 +321,16 @@ When a run fails:
 
 | Symptom | Likely cause | Fix |
 |---------|--------------|-----|
-| **Completed too early** | Ambiguous completion criteria | Add specific visual indicators |
+| **Completed too early** | Ambiguous completion criteria | Add specific visual indicators. Include "click Submit AND see confirmation" |
+| **Completed without submitting** | Submit button not included in goal | Explicitly state that clicking Submit is part of the task |
 | **Didn't complete** | Missing completion criteria | Add explicit COMPLETE condition |
-| **Wrong element clicked** | Multiple similar elements | Add distinguishing details to prompt |
+| **Wrong element clicked** | Multiple similar elements | Add distinguishing details: position, color, surrounding text |
 | **Form field skipped** | Field not visible or labeled differently | Describe the field's visual position |
 | **Loop stuck** | No reset between iterations | Add reset block at loop start |
+| **Autocomplete cycling** | AI second-guessing dropdown selections | Add "select and move on—don't modify" to prompt |
+| **Task navigates too far** | Task block continues until goal complete | Use Action/Navigation block for single-step actions |
+| **Session expired** | Human-in-the-loop timeout | Increase timeout or split into multiple workflows |
+| **Max steps reached** | Complex page or AI retrying actions | Increase `max_steps_per_run` or simplify the goal |
 
 ### When to adjust prompts vs file a bug
 
