add cloud UI getting started docs

--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -6,7 +6,7 @@ slug: getting-started/quickstart
 Run your first browser automation in 5 minutes. By the end of this guide, you'll scrape the top post from Hacker News using Skyvern's AI agent.
 
 <Note>
-Prefer a visual interface? Try the [Cloud UI](/cloud/getting-started) instead — no code required.
+Prefer a visual interface? Try the [Cloud UI](/cloud/ui-overview) instead — no code required.
 </Note>
 
 ## Step 1: Get your API key
