--- a/docs/debugging/faq.mdx
+++ b/docs/debugging/faq.mdx
@@ -1,7 +1,7 @@
 ---
 title: Frequently Asked Questions
 subtitle: Common questions and answers from the Skyvern community
-slug: faq
+slug: debugging/faq
 ---
 
 ## Troubleshooting
