--- a/docs/going-to-production/captcha-bot-detection.mdx
+++ b/docs/going-to-production/captcha-bot-detection.mdx
@@ -1,16 +1,14 @@
 ---
 title: CAPTCHA & Bot Detection
-subtitle: How Skyvern detects, solves, and avoids CAPTCHAs and anti-bot systems
+subtitle: How Skyvern handles CAPTCHAs and avoids triggering anti-bot systems
 slug: going-to-production/captcha-bot-detection
 ---
 
-Websites use CAPTCHAs and bot detection to block automated traffic. Skyvern handles both — it detects CAPTCHAs using vision, solves them automatically on Skyvern Cloud, and configures browsers to avoid triggering anti-bot systems in the first place.
+Skyvern detects CAPTCHAs using its vision model and solves them automatically.
 
----
+However, CAPTCHA solving is not guaranteed. Skyvern's solvers can fail on novel challenges or rate-limited IPs.
 
-## CAPTCHA detection
-
-Skyvern detects CAPTCHAs using its LLM vision model. During each step, the AI analyzes the page screenshot and identifies whether a CAPTCHA is present and what type it is.
+This guide helps you detect CAPTCHA failures and implement fallbacks to keep your automation running smoothly.
 
 **Supported CAPTCHA types:**
 
@@ -24,17 +22,13 @@ Skyvern detects CAPTCHAs using its LLM vision model. During each step, the AI an
 | `TEXT_CAPTCHA` | Distorted text/number images with an input field |
 | `OTHER` | Unrecognized CAPTCHA types |
 
-When the AI detects a CAPTCHA, it emits a `SOLVE_CAPTCHA` action with the identified `captcha_type`. What happens next depends on your deployment.
-
 ---
 
-## CAPTCHA solving
+## Detect CAPTCHA failures
 
-### Skyvern Cloud (automatic)
+### Using error code mapping
 
-On [Skyvern Cloud](https://app.skyvern.com), CAPTCHAs are solved automatically. When the AI detects a CAPTCHA, Skyvern's solver service handles it in the background. No configuration needed — it works out of the box for all supported CAPTCHA types.
-
-If the solver cannot resolve the CAPTCHA (rare edge cases or novel CAPTCHA types), the task continues with a `SOLVE_CAPTCHA` action failure. Handle this with [error code mapping](/going-to-production/error-handling):
+[Use `error_code_mapping`](/going-to-production/error-handling#step-3-use-error_code_mapping) to detect when a CAPTCHA blocks your automation. This gives you a consistent error code instead of parsing free-text failure messages.
 
 <CodeGroup>
 ```python Python
@@ -42,7 +36,7 @@ result = await client.run_task(
     prompt="Submit the application form. COMPLETE when you see confirmation.",
     url="https://example.com/apply",
     error_code_mapping={
-        "captcha_failed": "Return this if a CAPTCHA blocks progress after multiple attempts",
+        "cant_solve_captcha": "return this error if captcha isn't solved after multiple retries",
     },
 )
 ```
@@ -53,7 +47,7 @@ const result = await client.runTask({
     prompt: "Submit the application form. COMPLETE when you see confirmation.",
     url: "https://example.com/apply",
     error_code_mapping: {
-      captcha_failed: "Return this if a CAPTCHA blocks progress after multiple attempts",
+      cant_solve_captcha: "return this error if captcha isn't solved after multiple retries",
     },
   },
 });
@@ -67,111 +61,261 @@ curl -X POST "https://api.skyvern.com/v1/run/tasks" \
     "prompt": "Submit the application form. COMPLETE when you see confirmation.",
     "url": "https://example.com/apply",
     "error_code_mapping": {
-      "captcha_failed": "Return this if a CAPTCHA blocks progress after multiple attempts"
+      "cant_solve_captcha": "return this error if captcha isn't solved after multiple retries"
     }
   }'
 ```
 </CodeGroup>
 
-### Human Interaction block (workflows)
+When a CAPTCHA blocks the run, the response includes `output.error = "cant_solve_captcha"` — you can branch your logic on this code.
 
-For workflows where you want a human to solve the CAPTCHA manually, use the **Human Interaction** block. The workflow pauses and notifies you, then resumes after you solve it.
+<Info>
+For more on error code mapping and handling failures programmatically, see [Error Handling](/going-to-production/error-handling).
+</Info>
 
-```yaml
-blocks:
-  - block_type: navigation
-    label: fill_form
-    url: https://example.com/form
-    navigation_goal: Fill out the registration form
+### Using Human Interaction block
 
-  - block_type: human_interaction
-    label: solve_captcha
-    message: "Please solve the CAPTCHA and click Continue"
+For workflows, use the **Human Interaction** block to notify a human when a CAPTCHA needs manual solving.
 
-  - block_type: navigation
-    label: submit_form
-    navigation_goal: Click the submit button
+The block pauses the workflow and sends an email. The recipient can then use the **Take Control** button in Skyvern Cloud to solve the CAPTCHA manually. Once solved, they reply to the email with the positive descriptor (e.g., "Continue") to resume the workflow.
+
+<CodeGroup>
+```python Python
+import os
+import asyncio
+from skyvern import Skyvern
+
+async def main():
+    client = Skyvern(api_key=os.getenv("SKYVERN_API_KEY"))
+
+    workflow = await client.create_workflow(
+        json_definition={
+            "title": "Form Submission with CAPTCHA Fallback",
+            "workflow_definition": {
+                "parameters": [
+                    {
+                        "key": "form_url",
+                        "parameter_type": "workflow",
+                        "workflow_parameter_type": "string"
+                    },
+                    {
+                        "key": "form_data",
+                        "parameter_type": "workflow",
+                        "workflow_parameter_type": "json"
+                    }
+                ],
+                "blocks": [
+                    {
+                        "label": "fill_form",
+                        "block_type": "navigation",
+                        "url": "{{ form_url }}",
+                        "navigation_goal": "Fill out the form using the provided data. Stop before submitting if a CAPTCHA appears.",
+                        "parameter_keys": ["form_data"],
+                        "error_code_mapping": {
+                            "captcha_detected": "A CAPTCHA is displayed on the page"
+                        }
+                    },
+                    {
+                        "label": "solve_captcha",
+                        "block_type": "human_interaction",
+                        "instructions": "Please solve the CAPTCHA on the page, then click Continue.",
+                        "positive_descriptor": "Continue",
+                        "negative_descriptor": "Cancel",
+                        "timeout_seconds": 300,
+                        "sender": "workflow@yourcompany.com",
+                        "recipients": ["team@yourcompany.com"],
+                        "subject": "CAPTCHA requires manual solving",
+                        "body": "A CAPTCHA was detected during the workflow. Please solve it to continue."
+                    },
+                    {
+                        "label": "submit_form",
+                        "block_type": "navigation",
+                        "navigation_goal": "Click the submit button. COMPLETE when you see a confirmation message."
+                    }
+                ]
+            }
+        }
+    )
+
+    print(f"Workflow ID: {workflow.workflow_permanent_id}")
+
+asyncio.run(main())
 ```
+
+```typescript TypeScript
+import { SkyvernClient } from "@skyvern/client";
+
+async function main() {
+  const client = new SkyvernClient({
+    apiKey: process.env.SKYVERN_API_KEY,
+  });
+
+  const workflow = await client.createWorkflow({
+    body: {
+      json_definition: {
+        title: "Form Submission with CAPTCHA Fallback",
+        workflow_definition: {
+          parameters: [
+            {
+              key: "form_url",
+              parameter_type: "workflow",
+              workflow_parameter_type: "string",
+            },
+            {
+              key: "form_data",
+              parameter_type: "workflow",
+              workflow_parameter_type: "json",
+            },
+          ],
+          blocks: [
+            {
+              label: "fill_form",
+              block_type: "navigation",
+              url: "{{ form_url }}",
+              navigation_goal:
+                "Fill out the form using the provided data. Stop before submitting if a CAPTCHA appears.",
+              parameter_keys: ["form_data"],
+              error_code_mapping: {
+                captcha_detected: "A CAPTCHA is displayed on the page",
+              },
+            },
+            {
+              label: "solve_captcha",
+              block_type: "human_interaction",
+              instructions: "Please solve the CAPTCHA on the page, then click Continue.",
+              positive_descriptor: "Continue",
+              negative_descriptor: "Cancel",
+              timeout_seconds: 300,
+              sender: "workflow@yourcompany.com",
+              recipients: ["team@yourcompany.com"],
+              subject: "CAPTCHA requires manual solving",
+              body: "A CAPTCHA was detected during the workflow. Please solve it to continue.",
+            },
+            {
+              label: "submit_form",
+              block_type: "navigation",
+              navigation_goal:
+                "Click the submit button. COMPLETE when you see a confirmation message.",
+            },
+          ],
+        },
+      },
+    },
+  });
+
+  console.log(`Workflow ID: ${workflow.workflow_permanent_id}`);
+}
+
+main();
+```
+
+```bash cURL
+curl -X POST "https://api.skyvern.com/v1/workflows" \
+  -H "x-api-key: $SKYVERN_API_KEY" \
+  -H "Content-Type: application/json" \
+  -d '{
+    "json_definition": {
+      "title": "Form Submission with CAPTCHA Fallback",
+      "workflow_definition": {
+        "parameters": [
+          {
+            "key": "form_url",
+            "parameter_type": "workflow",
+            "workflow_parameter_type": "string"
+          },
+          {
+            "key": "form_data",
+            "parameter_type": "workflow",
+            "workflow_parameter_type": "json"
+          }
+        ],
+        "blocks": [
+          {
+            "label": "fill_form",
+            "block_type": "navigation",
+            "url": "{{ form_url }}",
+            "navigation_goal": "Fill out the form using the provided data. Stop before submitting if a CAPTCHA appears.",
+            "parameter_keys": ["form_data"],
+            "error_code_mapping": {
+              "captcha_detected": "A CAPTCHA is displayed on the page"
+            }
+          },
+          {
+            "label": "solve_captcha",
+            "block_type": "human_interaction",
+            "instructions": "Please solve the CAPTCHA on the page, then click Continue.",
+            "positive_descriptor": "Continue",
+            "negative_descriptor": "Cancel",
+            "timeout_seconds": 300,
+            "sender": "workflow@yourcompany.com",
+            "recipients": ["team@yourcompany.com"],
+            "subject": "CAPTCHA requires manual solving",
+            "body": "A CAPTCHA was detected during the workflow. Please solve it to continue."
+          },
+          {
+            "label": "submit_form",
+            "block_type": "navigation",
+            "navigation_goal": "Click the submit button. COMPLETE when you see a confirmation message."
+          }
+        ]
+      }
+    }
+  }'
+```
+</CodeGroup>
 
 ---
 
-## Bot detection avoidance
+## Handle CAPTCHA failures
+
+Use the **Take Control** button in the Cloud UI to manually solve CAPTCHAs that the agent can't handle.
+
+<img src="/images/take-control.png" />
+
+While watching a live run, click **Take Control** to pause the agent and operate the browser yourself. You can click, type, and solve the CAPTCHA directly. Release control when you're done and the agent resumes from where you left off.
+
+<Note>
+To watch a live run, open the run in the Cloud UI. See [Running from the Cloud UI](/getting-started/quickstart#from-the-cloud-ui) for details.
+</Note>
+
+This works both for ad-hoc runs you're monitoring and for workflows that pause via the Human Interaction block.
+
+---
+
+## Built-in bot detection avoidance
 
 Skyvern automatically configures the browser to reduce bot detection triggers. These protections apply to every run — no configuration needed.
-
-### Browser fingerprinting
-
-Skyvern launches Chromium with settings that remove common automation signals:
 
 - **`AutomationControlled` disabled** — Removes the Blink feature flag that marks the browser as automated
 - **`navigator.webdriver` hidden** — The `enable-automation` flag is suppressed so JavaScript detection scripts don't see a webdriver
 - **Viewport and user agent** — Set to match real consumer browsers
 - **Locale and timezone** — Automatically matched to the proxy location (see [Proxy & Geolocation](/going-to-production/proxy-geolocation))
 
-### Reducing detection risk
+---
 
-Beyond fingerprinting, how you structure your automation affects detection. Three patterns that help:
+## Reducing detection risk
 
-**1. Use residential proxies for sensitive sites.** Datacenter IPs are the most common bot signal. Residential proxies route through real ISP addresses. See [Proxy & Geolocation](/going-to-production/proxy-geolocation).
+Beyond fingerprinting, how you structure your automation affects detection:
 
-**2. Reuse browser sessions for multi-step flows.** Creating a fresh browser for every step looks suspicious. A persistent session maintains cookies, cache, and history — appearing as a returning user. See [Browser Sessions](/optimization/browser-sessions).
+- **Use residential proxies for sensitive sites** — Datacenter IPs are the most common bot signal. Residential proxies route through real ISP addresses. Set `proxy_location="RESIDENTIAL"` or use `RESIDENTIAL_ISP` for static IPs.
+- **Reuse browser sessions for multi-step flows** — Creating a fresh browser for every step looks suspicious. A persistent session maintains cookies, cache, and history. See [Browser Sessions](/optimization/browser-sessions).
+- **Use browser profiles for repeat visits** — Profiles save browser state from a previous session. The site sees a known browser with familiar cookies instead of a blank slate. See [Browser Profiles](/optimization/browser-profiles).
+- **Add wait blocks between rapid actions** — Instant actions can trigger behavioral detection. A short pause between steps looks more human.
 
-**3. Use browser profiles for repeat visits.** Profiles save browser state from a previous session. Starting with an existing profile means the site sees a known browser with familiar cookies, not a blank slate. See [Browser Profiles](/optimization/browser-profiles).
+### If you get blocked
+
+- **Increase `max_steps`** — Some bot challenges (like Cloudflare) loop through multiple verification pages. More steps give the solver more attempts.
+- **Switch to a residential proxy** — `RESIDENTIAL_ISP` provides a static IP that services are more likely to trust.
+- **Use a browser profile that previously passed** — If a profile has already cleared a Cloudflare challenge on a domain, it's more likely to pass again.
+- **Load Chrome extensions** — Extensions can add additional stealth capabilities. Set `EXTENSIONS` and `EXTENSIONS_BASE_PATH` in your environment.
 
 ---
 
-## Self-hosted deployment
+## Self-hosted deployments
 
-<Note>
-The sections above apply to Skyvern Cloud. If you're running Skyvern locally, the following differences apply.
-</Note>
+Automatic CAPTCHA solving is not available for self-hosted deployments.
 
-### CAPTCHA solving
-
-The open-source version does **not** include automatic CAPTCHA solving. When a CAPTCHA is detected, the agent pauses for 30 seconds to allow manual intervention (e.g., solving it in the browser window yourself), then continues.
-
-To handle CAPTCHAs in self-hosted workflows, use the Human Interaction block as described above.
-
-### Browser extensions
-
-Self-hosted deployments can load Chrome extensions for additional stealth or functionality:
-
-```bash
-# .env
-EXTENSIONS=extension1,extension2
-EXTENSIONS_BASE_PATH=/path/to/extensions
-```
-
-Extensions are loaded automatically when the browser launches.
-
-### Proxies
-
-Self-hosted deployments need their own proxy infrastructure. The `proxy_location` parameter is not available — configure proxies at the network level or via environment variables.
-
----
-
-## Troubleshooting
-
-### CAPTCHA blocks the run
-
-**On Skyvern Cloud:** This is rare. If it happens, the CAPTCHA type may be unsupported or the site changed its challenge. Add an `error_code_mapping` entry to detect the failure, and contact [support@skyvern.com](mailto:support@skyvern.com).
-
-**Self-hosted:** Use a Human Interaction block, or solve it manually within the 30-second window.
-
-### Bot detection triggered (access denied)
-
-1. Switch to a residential proxy — `proxy_location="RESIDENTIAL"` or `RESIDENTIAL_ISP` for static IPs
-2. Reuse a browser session instead of creating fresh browsers
-3. Use a browser profile with existing cookies
-4. Add `wait` blocks between rapid actions to reduce behavioral signals
-
-### Cloudflare challenge page loops
-
-Cloudflare sometimes loops through multiple challenges. If a task gets stuck:
-
-- Increase `max_steps` to give the solver more attempts
-- Use `RESIDENTIAL_ISP` for a static IP that Cloudflare is more likely to trust
-- Use a browser profile that has previously passed the Cloudflare challenge on that domain
+Instead, when a CAPTCHA is detected, the agent pauses for 30 seconds to allow manual intervention — solve it in the browser window yourself, then the agent continues automatically.
 
 ---
 
